sumo/tests/sumo/output/vtypeprobe/errors/id_missing/errors.sumo
Error: Attribute 'id' is missing in definition of a vtypeprobe.
Quitting (on error).
